--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="container">
       <div class="newcard">
-        <img src="/pictures/Healing_Spells_profile.jpg" class="img-profile" alt="profile">
+       <a href="https://open.spotify.com/artist/4a6DAIBgFdTZpud4uNXwBz" target="_blank">  <img src="/pictures/Healing_Spells_profile.jpg" class="img-profile" alt="profile"></a>
          <div class="newcard">
       <h1> Welcome to Healing Spells</h1>
         <h3>Healing Spells is an electronic music project combining techno beats with gripping world sounds</h3>
