--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="container">
       <div class="newcard">
-       <a href="https://open.spotify.com/artist/4a6DAIBgFdTZpud4uNXwBz" target="_blank">  <img src="/pictures/Healing_Spells_profile.jpg" class="img-profile" alt="profile"></a>
+       <a href="https://open.spotify.com/artist/4a6DAIBgFdTZpud4uNXwBz" target="_blank">  <img src="pictures/Healing_Spells_profile.jpg" class="img-profile" alt="profile"></a>
          <div class="newcard">
       <h1> Welcome to Healing Spells</h1>
         <h3>Healing Spells is an electronic music project combining techno beats with gripping world sounds</h3>
@@ -21,7 +21,7 @@
       <div class="card-white">
         <h2>Ancient Leisure</h2>
           <p>New album, out  January 2021</p>
-            <a href="https://open.spotify.com/artist/4a6DAIBgFdTZpud4uNXwBz" target="_blank"> <img src="/pictures/Ancient Leisure v4.png" class="img-hs" alt="Ancient Leisure"></a>
+            <a href="https://open.spotify.com/artist/4a6DAIBgFdTZpud4uNXwBz" target="_blank"> <img src="pictures/Ancient Leisure v4.png" class="img-hs" alt="Ancient Leisure"></a>
               <h2>About</h2>
                 <p>A follow up to 2019's Vestiges, Ancient Leisure is Healing Spell's most
       intimate record yet  </p>
@@ -50,7 +50,7 @@
           <p>Release date: September 2019</p>
       <!-- </div> -->
       <!-- <div class="card-white"> -->
-      <a href="https://open.spotify.com/album/3fPh8CC09ccAbSWYMUmSno?si=UiZTZUOkQTSeGX4iS7L2Jw"target="_blank"><img src="/pictures/Vestiges cover.jpeg" class="img-hs" alt="Vestiges"></a>
+      <a href="https://open.spotify.com/album/3fPh8CC09ccAbSWYMUmSno?si=UiZTZUOkQTSeGX4iS7L2Jw"target="_blank"><img src="pictures/Vestiges cover.jpeg" class="img-hs" alt="Vestiges"></a>
       <!-- </div> -->
       <!-- <div class="card-white">  <h2>About</h2> -->
         <p>In hist first album, Healing Spells creates an immersive journey referencing various musical cultures
@@ -104,7 +104,7 @@
           <p>Release date: January 2018</p>
       <!-- </div> -->
       <!-- <div class="card-white"> -->
-      <a href="https://open.spotify.com/album/0MQYYw2XNzDxnheSmT55TO?si=n0VYJYzrRpOD33DOfj0TlQ"target="_blank"><img src="/pictures/Past Lives cover (final).jpg" class="img-hs" alt="Past Lives"></a>
+      <a href="https://open.spotify.com/album/0MQYYw2XNzDxnheSmT55TO?si=n0VYJYzrRpOD33DOfj0TlQ"target="_blank"><img src="pictures/Past Lives cover (final).jpg" class="img-hs" alt="Past Lives"></a>
       <!-- </div> -->
       <!-- <div class="card-white">  <h2>About</h2> -->
         <p> Electronica by genre classification standards but worldly by aesthetic, "Past Lives" is a novel synthesis of electronica and world music.
