--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
         <h2>Live</h2>
         </div>
       <div class="card-white">
-        <img src="../pictures/IMG_1949.jpg" class="img-hs" alt="Live">
+        <img src="..pictures/IMG_1949.jpg" class="img-hs" alt="Live">
       </div>
       <div class="card-white">
-        <img src="../pictures/IMG_1961.jpg" class="img-hs" alt="Live">
+        <img src="..pictures/IMG_1961.jpg" class="img-hs" alt="Live">
       </div>
       <div class="card-white">
         <h2>Socials</h2>
