made some fixes

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <p>Release date: May 2018</p>
       <!-- </div> -->
       <!-- <div class="card-white"> -->
-      <a href="https://open.spotify.com/album/76Ykwil2XYKP16Cq8qqKb6?si=h0T2-MLdSAy4zHh-Yrny0g"target="_blank"><img src="/pictures/Healing-cover-.jpg" class="img-hs" alt="Vestiges"></a>
+      <a href="https://open.spotify.com/album/76Ykwil2XYKP16Cq8qqKb6?si=h0T2-MLdSAy4zHh-Yrny0g"target="_blank"><img src="pictures/Healing-cover-.jpg" class="img-hs" alt="Vestiges"></a>
       <!-- </div> -->
       <!-- <div class="card-white">  <h2>About</h2> -->
         <p> Sanctuary is an explorative piece guided by both extraordinary and ordinary experiences
